feat(artifact): add delete save router for user and client

--- a/artifacts/user/view/index.html
+++ b/artifacts/user/view/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--suppress HtmlUnknownTarget -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -27,8 +28,8 @@
         </div>
     </form>
     <div class="panel-login">
-        <div class="register" data-path="{{ basePath }}">Register</div>
-        <div class="login" data-path="{{ basePath }}" data-query="{{ query }}">Login</div></div>
+        <div class="register">Register</div>
+        <div class="login">Login</div></div>
     <div class="panel-third">
         <div class="title">Third-party</div>
         <div class="sns"><span class="github">Github</span><span class="google">Google</span></div>
